[package]
name = "antitelephone"
version = "0.1.0"
authors = ["blackle <isabelle@blackle-mori.com>"]

[dependencies]
typemap = "0.3.3"
serenity = "0.5"
duration-parser = "0.2"
timer = "0.2"
cast = "0.2.2"
regex = "0.2"
lazy_static = "1.0.0"
chrono = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
fs2 = "0.4.3"

[profile.release]
lto = true